Fix menu on mobile devices

--- a/css/cometvisu.css
+++ b/css/cometvisu.css
@@ -120,7 +120,7 @@ footer a:hover {
 .buttons a:hover {
   color: #fff;
   border-color: #fff;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   text-decoration: none;
 }
 
@@ -214,7 +214,7 @@ footer a:hover {
     transition: visibility 0.3s, opacity 0.1s linear;
   }
   .buttons {
-    position: absolute;
+    position: fixed;
     right: 0;
   }
   .buttons a {
